--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "com.unity.ads": "2.0.8",
     "com.unity.analytics": "2.0.16",
+    "com.unity.incrementalcompiler": "0.0.42-preview.19",
     "com.unity.package-manager-ui": "1.9.11",
+    "com.unity.postprocessing": "2.0.11-preview",
     "com.unity.probuilder": "3.0.9",
     "com.unity.progrids": "3.0.3-preview.0",
     "com.unity.purchasing": "2.0.3",
