--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,8 +2,8 @@
   "dependencies": {
     "com.unity.ads": "2.0.8",
     "com.unity.analytics": "3.0.9",
-    "com.unity.collab-proxy": "1.2.9",
-    "com.unity.package-manager-ui": "2.0.0-preview.7",
+    "com.unity.collab-proxy": "1.2.11",
+    "com.unity.package-manager-ui": "2.0.2",
     "com.unity.postprocessing": "2.0.11-preview",
     "com.unity.probuilder": "3.0.9",
     "com.unity.progrids": "3.0.3-preview.0",
